gccida/c0/gen_internal_sym
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_internal_sym/src/dwarf2out.c:6088:6: error: use of undeclared identifier 'gen_internal_sym_label_num'
v1 = gen_internal_sym_label_num++; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_internal_sym/src/obj/dwarf2out.o] Error 1
